--- a/src/mygroupsort/ClassSortingFrame.form
+++ b/src/mygroupsort/ClassSortingFrame.form
@@ -370,9 +370,7 @@
               <Font name="Arial Narrow" size="18" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="1">
-                <StringItem index="0" value="Class List"/>
-              </StringArray>
+              <StringArray count="0"/>
             </Property>
           </Properties>
           <Events>
